Add tests, fix issue where sources warnings and errors weren't being reported if test source files needed to be compiled